syntax = "proto3";

package testing.examples.extra_fields;

message SubField1 {
  string fielda = 1;
}

message SuperSubField1 {
  string fielda = 1;
  string fieldb = 2;
}

message Subset {
  string field1 = 1;
  repeated SubField1 arr_field = 2;
  map<string, SubField1> mapField = 3;
  SubField1 subMsg = 4;

  // Things it shouldn't touch
  repeated string foo = 5;
  map<string, string> bar = 6;
}

message Superset {
  string field1 = 1;
  repeated SuperSubField1 arr_field = 2;
  map<string, SuperSubField1> mapField = 3;
  SuperSubField1 subMsg = 4;

  // Things it shouldn't touch
  repeated string foo = 5;
  map<string, string> bar = 6;

  repeated string foo_extra = 7;
  map<string, string> bar_extra = 8;

  string field2 = 9;
}

